# cs393r_nav_project

./: README.md
turtlebot4_code/: Dockerfile  Makefile  tmux_session.sh
turtlebot4_code/pj_layouts/: debug_replan.xml
turtlebot4_code/turtlebot4_cpp_tutorials/: CMakeLists.txt  package.xml
turtlebot4_code/turtlebot4_nav/: CMakeLists.txt  package.xml
turtlebot4_code/turtlebot4_nav/bt_navigator/: navigate_through_poses_w_replanning_and_recovery.xml  navigate_to_pose_w_replanning_and_recovery.xml
turtlebot4_code/turtlebot4_nav/launch/: remapped_turtlebot4_nav_bringup.launch.py  simple_ahg2202.launch.py
turtlebot4_code/turtlebot4_nav/maps/: AHG.pgm  AHG.yaml  CDL_map.pgm  CDL_map.yaml
turtlebot4_code/turtlebot4_nav/src/: cmd_vel_remap_node.cpp  simple_battery_discharge_node.cpp  turtlebot4_recharge_monitor_node.cpp
turtlebot4_code/turtlebot4_nav/worlds/: AHG.yaml  CDL_map  CDL_map.sdf  CDL_v1.sdf  ahg2202_world.sdf  ahg2202_world_w_shortwall.sdf
